--- a/RESOURCES/WEIGHTS_EXAMPLE_OLD/README
+++ b/RESOURCES/WEIGHTS_EXAMPLE_OLD/README
@@ -1,1 +1,3 @@
-python "C:\Program Files (x86)\Eclipse\Sumo\tools\randomTrips.py" --weights-prefix example -n example.net.xml -r example.rou.xml
+python "C:\Program Files (x86)\Eclipse\Sumo\tools\randomTrips.py" --weights-prefix example -n example.net.xml -r example.rou.xml -i 1
+
+This is the commmand line to be ran when using weight files. The "-i 1" is required for use alongside .via files. "--weights-prefix example" is used to identify the weight files. "example" can be substituted for any file prefix.
